--- a/mainpage.html
+++ b/mainpage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="mainpage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins:wght@600" rel="stylesheet">
 </head>
 <body>
     <div class="topcontainer">
@@ -49,7 +49,7 @@
                 Mohammed<br>
                 Secretary General<br> 
                 Model United Nations</h3>
-                <img src="imgwebsite/mohimg.png">
+                <img id="dudeimg" src="imgwebsite/mohimg.png">
         </div>
         <div class="bottombar">
             <h3>meluhamun2023@gmail.com</h3>
