--- a/dashboard.html
+++ b/dashboard.html
@@ -11,15 +11,22 @@
     <meta name="google-signin-client_id" content="677888343246-mt5fuefa69pc6vjbkv5f9j9dcg9ap7it.apps.googleusercontent.com">
 </head>
 <body>
-    <h3 id = "title">Hello</h3>
-    <p id = "role">Developer</p>
+    <h3 id = "title">Good morning</h3>
     <div class="moneyraised">
         <p id="toptext">Fee Collected</p>
         <h1 id ="mrraised">0.00$</h3>
     </div>
     <div class="enrolledpeople">
-        <p id="toptext">People Enrolled</p>
+        <p id="toptext">Total Enrolled</p>
         <h1 id = "ep#">0 DS</h1>
+    </div>
+    <div class="enrolledpeople">
+        <p id="toptext">Delegate Applicants</p>
+        <h1 id = "ep#">0</h1>
+    </div>
+    <div class="enrolledpeople">
+        <p id="toptext">PhotoJournalism Applicants</p>
+        <h1 id = "ep#">0</h1>
     </div>
     <h2 id="t2">Control Panel</h2>
     <div class="customs">
