--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 </head>
 <body>
     <img id = "logo" src="imgwebsite/MMLOGO.png">
-    <h2 id="heading">Meluha Modal United Nations</h2>
+    <h2 id="heading">Meluha Model United Nations</h2>
     <h3 id="mologo">Meluha MUN 2023</h3>
     <div class="buttonlist">
         <button id="ow">Meluha MUN 2023</button>
-        <button id="dga">Delegate Applications</button>
+        <button id="dga">Individual Delegate Applications</button>
+        <button id="sdga">School Delegation Applications</button>
         <button id="ipa">International Press Applications</button>
         <button id="atr">Allocation List</button>
         <button id="pja">PhotoJournalism Applications</button>
+        <button id="tf">Transport Form</button>
+        <button id="af">Accommodation Form</button>
+    </div>
+    <div class="sociallinks">
+        <img src="imgwebsite/instagram (2).png" id="instabutton">
+        <img src="imgwebsite/gmail-logo (1).png" id="gmailbutton">
     </div>
     <script src="index.js"></script>
 </body>
