--- a/loginhtml.html
+++ b/loginhtml.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <div class="sidebackground">
-        <h3>Chat, speak and Interact<br>with the Secretariat Members.</h3>
+        <h3>Moderate and Administrate<br>Secretariat.</h3>
         <div class="contentpages">
             <div class="contentinfo">
                 <img src="EasyIcon.png">
-                <p>Easy to use</p>
+                <p>Simple Integration</p>
             </div>
             <div class="contentinfo">
                 <img src="nodejs.png">
-                <p>Runs on Fastest Framework</p>
+                <p>Runs on node.js framework</p>
             </div>
             <div class="contentinfo">
                 <img src="CrossPlatform.png">
-                <p>Cross platform</p>
+                <p>Cross-platform</p>
             </div>
         </div>
         <p id="credits">Made by Aakash</p>
@@ -32,11 +32,10 @@
     <h2 id="logo">Meluha MUN</h2>
     <div class="logincontent">
         <h2>Welcome back!</h2>
-        <input type="email" placeholder="Enter your email.." id="emailinput" required>
-        <input type="password" placeholder="Enter the security code" id="scode" required>
+        <input type="email" placeholder="Enter the Auth Code.." id="pincodeinput" required>
         <p id="errorbox"></p>
-        <button id="submit">Log in</button>
-        <p id = "disc">By continuing you accept to Meluha TOS and Privacy Policy.</p>
+        <button id="submit">Continue to Dashboard</button>
+        <p id = "disc">An Admin Panel inclusively for Secretariat Administration</p>
     </div>
     <script src="login.js"></script>
 </body>
