--- a/mainpage.html
+++ b/mainpage.html
@@ -16,7 +16,7 @@
             <button id="home">Home</button>
             <button>Secretariat</button>
             <button>Preliminary</button>
-            <button>Committee</button>
+            <button id="ctte">Committee</button>
             <button>Contact</button>
         </div>
         <div class="publicimg">
@@ -48,13 +48,17 @@
                 Warm regards,<br>
                 Mohammed<br>
                 Secretary General<br> 
-                Model United Nations</h3>
+                Meluha Model United Nations</h3>
                 <img id="dudeimg" src="imgwebsite/mohimg.png">
         </div>
         <div class="bottombar">
             <h3>meluhamun2023@gmail.com</h3>
             <img src="imgwebsite/MeluhaSchoolLogo.png">
         </div>
+        <div class="cttecontent">
+            <img src="imgwebsite/ctteimg.jpeg">
+        </div>
     </div>
+    <script src="mainpage.js"></script>
 </body>
 </html>
