--- a/mainpage.html
+++ b/mainpage.html
@@ -28,6 +28,7 @@
             <h2>About Meluha MUN</h2>
             <h3>I'm here to help and provide accurate information. Model United Nations (MUN) is actually a simulation of United Nations conferences where participants take on roles as delegates representing different countries. It's an educational event that involves discussing and solving global issues through diplomacy and negotiation. It's not about intelligence; it's about learning how international relations work and developing skills in research, public speaking, and teamwork. If you have any specific questions about MUN, feel free to ask!</h3>
         </div>
+        <h3 id="lettertitle">Letter from Secretary General</h3>
         <div class="lettercontent">
             <h3>Dear Delegates and Participants,<br><br>
 
@@ -46,10 +47,10 @@
                 Best wishes for a successful and enriching experience ahead!
                 <br><br>
                 Warm regards,<br>
-                Mohammed<br>
-                Secretary General<br> 
+                Mohammmed Mustafa,<br>
+                Secretary General,<br> 
                 Meluha Model United Nations</h3>
-                <img id="dudeimg" src="imgwebsite/mohimg.png">
+                <img id="dudeimg" src="imgwebsite/mohammedreal.png">
         </div>
         <div class="bottombar">
             <h3>meluhamun2023@gmail.com</h3>
@@ -58,6 +59,12 @@
         <div class="cttecontent">
             <img src="imgwebsite/ctteimg.jpeg">
         </div>
+    </div>
+    <div class="burgerframe">
+        <button>Home</button>
+        <button>Secretariat</button>
+        <button>Committees</button>
+        <button>Contact</button>
     </div>
     <script src="mainpage.js"></script>
 </body>
