--- a/mainpage.html
+++ b/mainpage.html
@@ -15,9 +15,8 @@
         <div class="buttonlist">
             <button id="home">Home</button>
             <button>Secretariat</button>
-            <button>Preliminary</button>
-            <button id="ctte">Committee</button>
-            <button>Contact</button>
+            <button id="ctte">Committees</button>
+            <button id="contactbn">Contact</button>
         </div>
         <img id="burgericon" src="imgwebsite/apps (1).png">
         <div class="publicimg">
@@ -57,15 +56,84 @@
             <h3>meluhamun2023@gmail.com</h3>
             <img src="imgwebsite/meluhalogo.png">
         </div>
-        <div class="cttecontent">
-            <img src="imgwebsite/ctteimg.jpeg">
+        <h2 id ="ctitle">Simulated Committees</h2>
+        <h3 id ="cdesc">Click on a Commmittee to see its about page</h3>
+        <div class="coml">
+            <div class="listc">
+                <a href="https://en.wikipedia.org/wiki/United_Nations_Security_Council">
+                    <img src="">
+                    <h2>UNSC</h2>
+                </a>
+            </div>
+            <div class="listc">
+                <a href="https://en.wikipedia.org/wiki/United_Nations_Human_Rights_Council">
+                    <img src="">
+                    <h2>UNHRC</h2>
+                </a>
+            </div>
+            <div class="listc">
+                <a href="https://www.wikipedia.org/">
+                    <img src="">
+                    <h2>DISEC</h2>
+                </a>
+            </div>
+            <div class="listc">
+                <a href="https://en.wikipedia.org/wiki/Lok_Sabha">
+                    <img src="">
+                    <h2>Lok Sabha</h2>
+                </a>
+            </div>
+            <div class="listc">
+                <a href="https://www.google.com/search?q=international+press+mun&rlz=1C1ONGR_enIN965IN965&oq=international+press+mun&aqs=chrome.0.0i512l6j0i22i30j69i61.4311j1j7&sourceid=chrome&ie=UTF-8#:~:text=The%20International%20Press%20consists%20of%20a%20body%20of%20news%20agencies%2C%20broadcasters%2C%20and%20the%20like%2C%20who%20has%20their%20form%20of%20liberty%20in%20informing%2C%20and%20deliberating%20about%20events%20occurring%20in%20the%20United%20Nations">
+                    <img src="">
+                    <h2>International Press</h2>
+                </a>
+            </div>
+            <div class="listc">
+                <a href="https://en.wikipedia.org/wiki/United_Nations#:~:text=states.%5B197%5D-,Other%20global%20issues,-Since%20the%20UN%27s">
+                    <img src="">
+                    <h2>JCC</h2>
+                </a>
+            </div>
+            <div class="listc">
+                <a href="https://en.wikipedia.org/wiki/G20">
+                    <img src="">
+                    <h2>G20</h2>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="contactinfo">
+        <div class="kidname">
+            <img src="imgwebsite/mohimg.png">
+            <h3>Mohammmed Mustafa</h3>
+            <p id="insta">Secretary General</p>
+            <p id="phonenumber">+91 79971 56653</p>
+        </div>
+        <div class="kidname">
+            <img src="imgwebsite/charitaimg.png">
+            <h3>Charita T</h3>
+            <p id="insta">Director General</p>
+            <p id="phonenumber">+91 77021 03252</p>
+        </div>
+        <div class="kidname">
+            <img src="imgwebsite/anuimg.png">
+            <h3>Anushka</h3>
+            <p id="insta">Chief of Staff</p>
+            <p id="phonenumber">-</p>
+        </div>
+        <div class="kidname">
+            <img src="imgwebsite/rohitimg.png">
+            <h3>Rohit</h3>
+            <p id="insta">Head of Delegate Affairs</p>
+            <p id="phonenumber">+91 98666 36392</p>
         </div>
     </div>
     <div class="burgerframe">
-        <button>Home</button>
+        <button id="mobhb">Home</button>
         <button>Secretariat</button>
-        <button>Committees</button>
-        <button>Contact</button>
+        <button id="mobcb">Committees</button>
+        <button id="mobilecb">Contact</button>
     </div>
     <script src="mainpage.js"></script>
 </body>
