--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="ipa">International Press Applications</button>
         <button id="atr">Allocation List</button>
         <button id="pja">PhotoJournalism Applications</button>
+        <button id="al">Allocations List</button>
         <button id="tf">Transport Form</button>
         <button id="af">Accommodation Form</button>
     </div>
